# file-encrypt

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bumpversion.yml  cd.yml
src/: aes-block.rs  main.rs  ring-aes.rs  ring-poly1305.rs
tests/: test-file.txt  test-file.txt.enc
