[package]
name = "file-encrypt"
version = "0.0.1"
authors = ["HSP <hiranp>"]
edition = "2021"
description = "File Encryption in Rust"
repository = "https://github.com/hiranp/file-encrypt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = "0.5.2"
chacha20poly1305 = "0.10.1"
rand = "0.8.4"
ring = "0.16.20"
clap = { version = "4.3.5", features = ["derive"] }
aes-gcm = "0.10.2"
# getrandom = "0.2"

[dev-dependencies]

[[bin]]
path = "src/main.rs"
name = "file_encrypt-cli"

